# ros2arm_ws

./: .gitignore  README.md  camera.md  phase3_results.json
grip/: grip_log.json  gripper.py  phase1_characterize.py  phase1_results.json  phase2_results.json  phase2_stall_threshold.py  phase3_lift_test.py  test_smart_grip.py
home/: arm_homes.py  home_positions.json  test_arm_connection.py
scripts/: fk_measure.py  fk_measurements.json  floor_filter.py  joint_jog.py  keyboard_teleop.py  verify_fk.py
selfPlanning/: robot_vision_pipeline.docx
src/armpi_ultra_description/: package.xml  setup.cfg  setup.py
src/armpi_ultra_description/launch/: display.launch.py
src/armpi_ultra_description/rviz/: arm.rviz
src/armpi_ultra_description/urdf/: armpi_ultra.urdf
src/deptrum-ros-driver-aurora930/: .clang-format  .gitignore  .gitlab-build-release-aurora930.yml  .gitlab-build-release-nebula.yml  .gitlab-build-release-stellar400.yml  .gitlab-ci.yml  CMakeLists.txt  README.md  RELEASE_AURORA930.md  RELEASE_NEBULA.md  RELEASE_STELLAR400.md  RELEASE_STELLAR420.md  version_ros_aurora930.h  version_ros_aurora930.h.in  version_ros_nebula.h  version_ros_nebula.h.in  version_ros_nebula100.h  version_ros_nebula100.h.in  version_ros_stellar400.h  version_ros_stellar400.h.in
src/deptrum-ros-driver-aurora930/cmake/: Download.cmake  FindGFlags.cmake  FindGLog.cmake
src/deptrum-ros-driver-aurora930/debian/: postinst
src/deptrum-ros-driver-aurora930/docs/: building.md  usage_nebula.md  usage_stellar400.md  usage_stellar420.md
src/deptrum-ros-driver-aurora930/include/deptrum_ros_driver/: aurora900_ros2_device.h  camera_parameters.h  nebula_ros2_device.h  ros2_device.h  ros2_types.h  stellar400_ros2_device.h
src/deptrum-ros-driver-aurora930/launch_aurora930/launch/: aurora930_launch.py
src/deptrum-ros-driver-aurora930/launch_nebula/launch/: nebula_launch.py  nebula_multi_launch.py  sub_node_ci_nebula_launch.py  viewer_launch.py
src/deptrum-ros-driver-aurora930/launch_stellar400/launch/: stellar400_launch.py  stellar400_multi_launch.py  sub_node_ci_stellar400_launch.py  viewer400_launch.py
src/deptrum-ros-driver-aurora930/launch_stellar420/launch/: stellar420_launch.py  stellar420_multi_launch.py  sub_node_ci_stellar420_launch.py  viewer420_launch.py
src/deptrum-ros-driver-aurora930/rviz/: aurora930-ros2.rviz  nebula-ros2.rviz  stellar400-ros2.rviz
src/deptrum-ros-driver-aurora930/src/: aurora900_ros2_device.cc  camera_parameters.cc  nebula_ros2_device.cc  ros2_device.cc  ros2_node.cc  stellar400_ros2_device.cc
src/deptrum-ros-driver-aurora930/subscribe_node/: CMakeLists.txt  README.md
src/deptrum-ros-driver-aurora930/subscribe_node/src/: sub_node.cc  sub_node_ci.cc
src/kinematics/: fkandik.md  package.xml  setup.py
src/kinematics/kinematics/: armpi_ultra.urdf  ik.py  transform.py
