<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armpi_ultra_description</name>
  <version>0.1.0</version>
  <description>URDF, launch, and RViz config for ArmPi Ultra simulation</description>
  <maintainer email="andres.torres25g@gmail.com">andres</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>