<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinematics</name>
  <version>0.1.0</version>
  <description>Pure-Python IK/FK for ArmPi Ultra using ikpy and the robot URDF.</description>
  <maintainer email="andres.torres25g@gmail.com">andres</maintainer>
  <license>MIT</license>

  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
